--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
+    <div class="next"></div>
+    <div class="controls"></div>
   </body>
 </html>
