--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
         padding: 0;
         margin: 0;
       }
+      #root {
+        width: 360px;
+        height: 520px;
+        border: 1px dashed #abcdef;
+      }
     </style>
   </head>
   <body>
